// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToggle is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiToggle testClass1 testClass2"
>
  <input
    aria-label="Is toggle on?"
    class="euiToggle__input"
    data-test-subj="test subject string"
    type="checkbox"
  />
</div>
`;

exports[`EuiToggle props checked is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiToggle euiToggle--checked testClass1 testClass2"
>
  <input
    aria-label="Is toggle on?"
    checked=""
    class="euiToggle__input"
    data-test-subj="test subject string"
    type="checkbox"
  />
</div>
`;

exports[`EuiToggle props isDisabled is rendered 1`] = `
<div
  class="euiToggle"
>
  <input
    aria-label="Is toggle on?"
    class="euiToggle__input"
    disabled=""
    type="checkbox"
  />
</div>
`;

exports[`EuiToggle props onChange is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiToggle testClass1 testClass2"
>
  <input
    aria-label="Is toggle on?"
    class="euiToggle__input"
    data-test-subj="test subject string"
    type="checkbox"
  />
</div>
`;

exports[`EuiToggle props type is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiToggle testClass1 testClass2"
>
  <input
    aria-label="Is toggle on?"
    class="euiToggle__input"
    data-test-subj="test subject string"
    type="radio"
  />
</div>
`;
